2002-01-17  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02866]
	* search.c: #include <signal.h>
	* search.c (open_migemo): ignore SIG_INT for migemo process
	* search.c (open_migemo): close_tty()
	* search.c (open_migemo): use execl() instead of system()
	
2002-01-17  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02865]
	* search.c (open_migemo): add flush_tty()

2002-01-17  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02864] def_migemo_command
	* configure (def_migemo_command): default is
		migemo -t egrep /usr/local/share/migemo/migemo-dict

2002-01-17  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02863] discard migemo error message
	* search.c (open_migemo): close stderr

2002-01-17  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02862] SIGPIPE for migemo support
	* main.c (SigPipe): added
	* main.c (MAIN): signal(SIGPIPE, )
	* search.c: #include <errno.h>
	* search.c (migemostr): check fflush() error
	* search.c (migemostr): check result string (empty is err)
	* search.c (migemostr): if error occured, disable use_migemo

2002-01-17  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02861] IPv6 configuration check
	* configure: force "#define INET6" if socket(AF_INET6, SOCK_STREAM, 0)
			failed but use_ipv6=y in config.param

2002-01-17  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02859]
	* config.h.dist (DEF_MIGEMO_COMMAND): added
	* configure (DEF_MIGEMO_COMMAND): added
	* fm.h (migemo_command): initial value is DEF_MIGEMO_COMMAND
	* main.c (migemostr): remove here, move search.c
	* main.c (srchcore): dont migemostr() here
	* proto.h (init_migemo): added
	* rc.c (sync_with_option): init_migemo()
	* search.c (init_migemo): added
	* search.c (open_migemo): added
	* search.c (migemostr): communicate background migemo
	* search.c (forwardSearch): if regexCompile for migemostr failed, 
		try original str
	* search.c (backwardSearch): ditto

2002-01-17  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02855]