@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.26 2002/01/16 16:49:54 ukai Exp $ */
+/* $Id: proto.h,v 1.27 2002/01/17 11:06:45 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -113,6 +113,7 @@ extern char *filename_extension(char *patch, int is_url);
 #ifdef USE_EXTERNAL_URI_LOADER
 extern void initURIMethods();
 extern Str searchURIMethods(ParsedURL *pu);
+extern void chkExternalURIBuffer(Buffer *buf);
 #endif
 extern void examineFile(char *path, URLFile *uf);
 extern char *acceptableEncoding();
